wp_derive_request_builder/tests/fail/namespace_attr_is_not_literal.rs
#[derive(wp_derive_request_builder::WpDerivedRequest)]
#[Namespace(wp)]
#[SparseField(crate::SparseUserField)]
enum UsersRequest {
    #[contextual_get(url = "/users", params = &UserListParams, output = Vec<SparseUser>)]
    List,
}

fn main() {}
